# naval_battle

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-build-and-testing.yml
UML/: .project  lb2.drawio  lb3.drawio
include/: Game.h  GameController.h  GameField.h  Ship.h  ShipManager.h  SkillManager.h
include/IO/: InputHandler.h
include/exceptions/: NoSkillException.h  NoSkillsException.h  OutOfBoundsException.h  ShipPlacementException.h
include/player/: BotPlayer.h  HumanPlayer.h  Player.h
include/save_load/: File.h  GameState.h
include/skills/: Bombing.h  DoubleDamage.h  Scanner.h  Skill.h
lib/: Cell.cpp  Game.cpp  GameField.cpp  Ship.cpp  ShipManager.cpp  SkillManager.cpp  main.cpp
lib/save_load/: File.cpp  GameState.cpp
lib/skills/: Bombing.cpp  DoubleDamage.cpp  Scanner.cpp
reports/: LB2
tests/: GameField_test.cpp  ShipManager_test.cpp  Ship_test.cpp
